Adds email notifications, fixes issue with trix content rendering, and preps for heroku deploy

--- a/http/web/tmpl/groups/index.tmpl
+++ b/http/web/tmpl/groups/index.tmpl
@@ -11,7 +11,7 @@
             {{ if eq (len .Data.groups) 0 }}
             It looks like you have not created any groups yet. Let's start here.
             {{ else }}
-            Take some time to craft your thoughts for any of the groups your belong to.
+            Take some time to craft your thoughts for any of the groups you belong to.
             {{ end }}
           </p>
 
