--- a/http/web/tmpl/notes/index.tmpl
+++ b/http/web/tmpl/notes/index.tmpl
@@ -36,7 +36,7 @@
             <div class="min-w-0 flex-1 sm:flex sm:items-center sm:justify-between">
               <div>
                 <div class="text-sm leading-5 font-medium text-indigo-600 truncate">
-                  Title will go  here
+                  {{ $note.Title }}
                   <span class="ml-1 font-normal text-gray-500">
                   by {{ $note.Author.FullName }}
                   </span>
