--- a/http/web/tmpl/notes/show.tmpl
+++ b/http/web/tmpl/notes/show.tmpl
@@ -7,7 +7,7 @@
         {{ .Data.note.Author.FullName }}
       </h1>
       <div class="trix-content">
-        {{ .Data.note.Content }}
+        {{ .Data.note.HTMLContent }}
       </div>
 
       <div class="mt-16">
