--- a/http/web/tmpl/groups/index.tmpl
+++ b/http/web/tmpl/groups/index.tmpl
@@ -27,39 +27,37 @@
     </div>
 
     {{ if gt (len .Data.groups) 0 }}
-    <ul>
+    <ul role="list" class="divide-y divide-gray-200">
       {{ range $idx, $group := .Data.groups }}
-       <li {{ if gt $idx 0  }}class="border-t border-gray-200"{{ end}}>
-        <a href="/groups/{{ $group.ID }}/notes" class="block hover:bg-gray-50 focus:outline-none focus:bg-gray-50 transition duration-150 ease-in-out" title="Create a note">
+      <li>
+        <a href="/groups/{{ $group.ID }}/notes" class="block hover:bg-gray-50" title="View group's notes">
           <div class="px-4 py-4 flex items-center sm:px-6">
             <div class="min-w-0 flex-1 sm:flex sm:items-center sm:justify-between">
-              <div>
-                <div class="text-sm leading-5 font-medium text-indigo-600 truncate">
-                  {{ $group.Name }}
-                  <span class="ml-1 font-normal text-gray-500">
-                    {{/* in Engineering */}}
+              <div class="truncate">
+                <div class="flex text-sm">
+                  <p class="font-medium text-indigo-600 truncate">{{ $group.Name }}</p>
+                  <p class="ml-1 flex-shrink-0 font-normal text-gray-500">
                     {{ $group.Description }}
-                  </span>
+                  </p>
                 </div>
                 <div class="mt-2 flex">
-                  <div class="flex items-center text-sm leading-5 text-gray-500">
-                    <!-- Heroicon name: calendar -->
-                    <svg class="flex-shrink-0 mr-1.5 h-5 w-5 text-gray-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+                  <div class="flex items-center text-sm text-gray-500">
+                    <!-- Heroicon name: solid/calendar -->
+                    <svg class="flex-shrink-0 mr-1.5 h-5 w-5 text-gray-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                       <path fill-rule="evenodd" d="M6 2a1 1 0 00-1 1v1H4a2 2 0 00-2 2v10a2 2 0 002 2h12a2 2 0 002-2V6a2 2 0 00-2-2h-1V3a1 1 0 10-2 0v1H7V3a1 1 0 00-1-1zm0 5a1 1 0 000 2h8a1 1 0 100-2H6z" clip-rule="evenodd" />
                     </svg>
-                    <span>
+                    <p>
                       Created on
                       <time datetime="2020-01-07">{{ $group.CreatedAtHumanized }}</time>
-                    </span>
+                    </p>
                   </div>
                 </div>
               </div>
               <div class="mt-4 flex-shrink-0 sm:mt-0">
                 <div class="flex overflow-hidden">
-                  <img class="inline-block h-6 w-6 rounded-full text-white shadow-solid" src="https://images.unsplash.com/photo-1491528323818-fdd1faba62cc?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="">
-                  <img class="-ml-1 inline-block h-6 w-6 rounded-full text-white shadow-solid" src="https://images.unsplash.com/photo-1550525811-e5869dd03032?ixlib=rb-1.2.1&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="">
-                  <img class="-ml-1 inline-block h-6 w-6 rounded-full text-white shadow-solid" src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2.25&w=256&h=256&q=80" alt="">
-                  <img class="-ml-1 inline-block h-6 w-6 rounded-full text-white shadow-solid" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="">
+                  {{ range $userIDX, $user :=  $group.Users }}
+                  <img class="{{ if ne $userIDX 0 }}-ml-1{{ end }} inline-block h-6 w-6 rounded-full text-white shadow-solid" src="{{ $user.PictureURL }}" alt="{{ $user.FullName }}">
+                  {{ end }}
                 </div>
               </div>
             </div>
