--- a/http/web/tmpl/groups/new.tmpl
+++ b/http/web/tmpl/groups/new.tmpl
@@ -4,7 +4,7 @@
     <div class="md:col-span-1">
       <div class="px-4 sm:px-0">
         <h3 class="text-lg font-medium leading-6 text-gray-900">Create a new group</h3>
-        <p class="mt-1 text-sm leading-5 text-gray-600">
+        <p class="mt-1 text-sm text-gray-600">
           Notes created will be shared with each member of the group.
         </p>
       </div>
@@ -12,18 +12,20 @@
     <div class="mt-5 md:mt-0 md:col-span-2">
       <form action="/groups/create" method="POST">
         <div class="shadow sm:rounded-md sm:overflow-hidden">
-          <div class="px-4 py-5 bg-white sm:p-6">
-            <div class="col-span-6">
-              <label for="name" class="block text-sm font-medium leading-5 text-gray-700">Name</label>
-              <input id="name" name="name" class="mt-1 form-input block w-full transition duration-150 ease-in-out sm:text-sm sm:leading-5" required>
+          <div class="px-4 py-5 bg-white space-y-6 sm:p-6">
+            <div class="grid grid-cols-3 gap-6">
+              <div class="col-span-3">
+                <label for="name" class="block text-sm font-medium text-gray-700">Name</label>
+                <input type="text" name="name" id="name" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" required>
+              </div>
             </div>
 
-            <div class="mt-6">
-              <label for="description" class="block text-sm leading-5 font-medium text-gray-700">
+            <div>
+              <label for="description" class="block text-sm font-medium text-gray-700">
                 Description
               </label>
-              <div class="rounded-md shadow-sm">
-                <textarea id="description" name="description" rows="3" class="form-textarea mt-1 block w-full transition duration-150 ease-in-out sm:text-sm sm:leading-5" placeholder="Let's discuss things" required></textarea>
+              <div class="mt-1">
+                <textarea id="description" name="description" rows="3" class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 mt-1 block w-full sm:text-sm border border-gray-300 rounded-md" placeholder="Let's discuss things" required></textarea>
               </div>
               <p class="mt-2 text-sm text-gray-500">
                 Set your intention for the group.
@@ -34,19 +36,17 @@
               <label class="block text-sm leading-5 font-medium text-gray-700">
                 Users
               </label>
-              <select id="userIDs" name="userIDs" class="form-select mt-1 block w-full bg-white border border-gray-300 rounded-md shadow-sm py-2 px-3 focus:outline-none focus:shadow-outline-blue focus:border-blue-300 transition duration-150 ease-in-out sm:text-sm sm:leading-5" multiple>
+              <select id="userIDs" name="userIDs" class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" multiple>
                 {{ range .Data.users }}
                 <option value="{{ .ID }}">{{ .FullName }}</option>
                 {{ end }}
               </select>
-            </div>
+            </div> 
           </div>
           <div class="px-4 py-3 bg-gray-50 text-right sm:px-6">
-            <span class="inline-flex rounded-md shadow-sm">
-              <button type="submit" class="inline-flex justify-center py-2 px-4 border border-transparent text-sm leading-5 font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-500 focus:outline-none focus:border-indigo-700 focus:shadow-outline-indigo active:bg-indigo-700 transition duration-150 ease-in-out">
-                Save
-              </button>
-            </span>
+            <button type="submit" class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+              Save
+            </button>
           </div>
         </div>
       </form>
