--- a/http/web/tmpl/layout/authenticated_base.tmpl
+++ b/http/web/tmpl/layout/authenticated_base.tmpl
@@ -9,7 +9,14 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="shortcut icon" href="/assets/favicon.ico">
 
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/@tailwindcss/ui@0.6.2/dist/tailwind-ui.min.css">
+    <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
+
+    <link rel="stylesheet" type="text/css" href="https://www.unpkg.com/tailwindcss@2.2.9/dist/base.min.css">
+    <link rel="stylesheet" type="text/css" href="https://www.unpkg.com/tailwindcss@2.2.9/dist/components.min.css">
+    <link rel="stylesheet" type="text/css" href="https://unpkg.com/@tailwindcss/forms@0.3.3/dist/forms.min.css">
+    <link rel="stylesheet" type="text/css" href="https://www.unpkg.com/tailwindcss@2.2.9/dist/utilities.min.css">
+    <style>html { font-family: 'Inter var', sans-serif; }</style>
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/trix/1.3.1/trix.min.css" integrity="sha512-5m1IeUDKtuFGvfgz32VVD0Jd/ySGX7xdLxhqemTmThxHdgqlgPdupWoSN8ThtUSLpAGBvA8DY2oO7jJCrGdxoA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>trix-toolbar .trix-button-group--file-tools { display: none; }</style>
 
@@ -28,7 +35,7 @@
     </div>
 
     <script type="text/javascript">
-      window.Flashes = [{{ range .Flashes }}{message: {{ . }}},{{ end }}];
+      window.Flashes = {{ .Flashes }};
     </script>
 
     {{ template "scripts" . }}
