--- a/http/web/tmpl/notes/index.tmpl
+++ b/http/web/tmpl/notes/index.tmpl
@@ -27,30 +27,30 @@
     </div>
 
     {{ if gt (len .Data.notes) 0 }}
-    <ul>
+    <ul role="list" class="divide-y divide-gray-200">
       {{ $groupID := .Data.groupID }}
       {{ range $idx, $note := .Data.notes }}
-      <li {{ if gt $idx 0  }}class="border-t border-gray-200"{{ end}}>
-        <a href="/groups/{{ $groupID }}/notes/{{ .ID }}" class="block hover:bg-gray-50 focus:outline-none focus:bg-gray-50 transition duration-150 ease-in-out">
+      <li>
+        <a href="/groups/{{ $groupID }}/notes/{{ .ID }}" class="block hover:bg-gray-50" title="View the note">
           <div class="px-4 py-4 flex items-center sm:px-6">
             <div class="min-w-0 flex-1 sm:flex sm:items-center sm:justify-between">
-              <div>
-                <div class="text-sm leading-5 font-medium text-indigo-600 truncate">
-                  {{ $note.Title }}
-                  <span class="ml-1 font-normal text-gray-500">
-                  by {{ $note.Author.FullName }}
-                  </span>
+              <div class="truncate">
+                <div class="flex text-sm">
+                  <p class="font-medium text-indigo-600 truncate">{{ $note.Title }}</p>
+                  <p class="ml-1 flex-shrink-0 font-normal text-gray-500">
+                    by {{ $note.Author.FullName }}
+                  </p>
                 </div>
                 <div class="mt-2 flex">
-                  <div class="flex items-center text-sm leading-5 text-gray-500">
-                    <!-- Heroicon name: calendar -->
-                    <svg class="flex-shrink-0 mr-1.5 h-5 w-5 text-gray-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+                  <div class="flex items-center text-sm text-gray-500">
+                    <!-- Heroicon name: solid/calendar -->
+                    <svg class="flex-shrink-0 mr-1.5 h-5 w-5 text-gray-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                       <path fill-rule="evenodd" d="M6 2a1 1 0 00-1 1v1H4a2 2 0 00-2 2v10a2 2 0 002 2h12a2 2 0 002-2V6a2 2 0 00-2-2h-1V3a1 1 0 10-2 0v1H7V3a1 1 0 00-1-1zm0 5a1 1 0 000 2h8a1 1 0 100-2H6z" clip-rule="evenodd" />
                     </svg>
-                    <span>
+                    <p>
                       Created on
                       <time datetime="2020-01-07">{{ $note.CreatedAtHumanized }}</time>
-                    </span>
+                    </p>
                   </div>
                 </div>
               </div>
