--- a/http/web/tmpl/notes/show.tmpl
+++ b/http/web/tmpl/notes/show.tmpl
@@ -48,7 +48,7 @@
           <div class="space-y-6">
             <div class="space-y-1">
               <div class="rounded-md shadow-sm">
-                <textarea id="content" name="content" rows="3" class="form-textarea block w-full transition duration-150 ease-in-out sm:text-sm sm:leading-5" placeholder="Add a comment" required></textarea>
+                <textarea id="content" name="content" rows="3" class="shadow-sm block w-full focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm border border-gray-300 rounded-md" placeholder="Add a comment" required></textarea>
               </div>
             </div>
 
