--- a/http/web/tmpl/layout/authenticated_base.tmpl
+++ b/http/web/tmpl/layout/authenticated_base.tmpl
@@ -21,6 +21,7 @@
     <style>trix-toolbar .trix-button-group--file-tools { display: none; }</style>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/trix/1.3.1/trix.min.js" integrity="sha512-2RLMQRNr+D47nbLnsbEqtEmgKy67OSCpWJjJM394czt99xj3jJJJBQ43K7lJpfYAYtvekeyzqfZTx2mqoDh7vg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script defer src="https://unpkg.com/alpinejs@3.3.4/dist/cdn.min.js"></script>
   </head>
 
   <body class="min-h-screen bg-gray-100">
@@ -34,9 +35,43 @@
       </main>
     </div>
 
-    <script type="text/javascript">
-      window.Flashes = {{ .Flashes }};
-    </script>
+    <div aria-live="assertive" class="fixed inset-0 flex items-end px-4 py-6 pointer-events-none sm:p-6">
+      <div class="w-full flex flex-col items-center space-y-4 sm:items-end">
+        {{ range .Flashes }}
+        <div 
+          class="max-w-sm w-full bg-white shadow-lg rounded-lg pointer-events-auto ring-1 ring-black ring-opacity-5 overflow-hidden border-t-4 {{ .GetClass }}" 
+          x-data="{ open: true }" 
+          x-show="open" 
+          x-transition:enter="transform ease-out duration-300 transition"
+          x-transition:enter-start="translate-y-2 opacity-0 sm:translate-y-0 sm:translate-x-2"
+          x-transition:enter-end="translate-y-0 opacity-100 sm:translate-x-0"
+          x-transition:leave="transition ease-in duration-100"
+          x-transition:leave-start="opacity-100"
+          x-transition:leave-end="opacity-0"
+          x-init="setTimeout(() => open = false, 10000)"
+        >
+          <div class="p-4">
+            <div class="flex items-center">
+              <div class="w-0 flex-1 flex justify-between">
+                <p class="w-0 flex-1 text-sm font-medium text-gray-900">
+                  {{ .Msg }}
+                </p>
+              </div>
+              <div class="ml-4 flex-shrink-0 flex">
+                <button class="bg-white rounded-md inline-flex text-gray-400 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" @click="open = false;">
+                  <span class="sr-only">Close</span>
+                  <!-- Heroicon name: solid/x -->
+                  <svg class="h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                    <path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd" />
+                  </svg>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+        {{ end }}
+      </div>
+    </div>
 
     {{ template "scripts" . }}
   </body>
