Adds fly.io and sets up github actions deploy process

--- a/tmpl/layout/authenticated_base.tmpl
+++ b/tmpl/layout/authenticated_base.tmpl
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
 
     <title>Private Notes</title>
-    <meta name="description" content="This application is for long form group conversations that you want to keep private.">
+    <meta name="description" content="This application is for long form group conversations that you want to keep private. It's not bad">
     <meta name="author" content="profsmallpine">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="shortcut icon" href="/assets/favicon.ico">
