--- a/tmpl/notes/show.tmpl
+++ b/tmpl/notes/show.tmpl
@@ -15,7 +15,7 @@
         <div class="flex flex-col mb-4 rounded-lg border overflow-hidden">
           <div class="flex-1 p-4 flex flex-col justify-between">
             <div class="flex-1">
-              <p class="text-sm leading-6 text-gray-500">
+              <p class="text-sm leading-6 text-gray-500 whitespace-pre-line">
                 {{ .Content }}
               </p>
             </div>
