--- a/tmpl/layout/authenticated_base.tmpl
+++ b/tmpl/layout/authenticated_base.tmpl
@@ -23,6 +23,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/trix/1.3.1/trix.min.js" integrity="sha512-2RLMQRNr+D47nbLnsbEqtEmgKy67OSCpWJjJM394czt99xj3jJJJBQ43K7lJpfYAYtvekeyzqfZTx2mqoDh7vg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script defer src="https://unpkg.com/alpinejs@3.3.4/dist/cdn.min.js"></script>
     <script src="https://unpkg.com/htmx.org@1.6.0" integrity="sha384-G4dtlRlMBrk5fEiRXDsLjriPo8Qk5ZeHVVxS8KhX6D7I9XXJlNqbdvRlp9/glk5D" crossorigin="anonymous"></script>
+    <script crossorigin="anonymous" src="https://unpkg.com/@hotwired/turbo@7.2.0/dist/turbo.es2017-umd.js"></script>
   </head>
 
   <body class="min-h-screen bg-gray-100">
