Adds hotwire, stimulus, and websockets support

--- a/tmpl/layout/authenticated_base.tmpl
+++ b/tmpl/layout/authenticated_base.tmpl
@@ -24,6 +24,7 @@
     <script defer src="https://unpkg.com/alpinejs@3.3.4/dist/cdn.min.js"></script>
     <script src="https://unpkg.com/htmx.org@1.6.0" integrity="sha384-G4dtlRlMBrk5fEiRXDsLjriPo8Qk5ZeHVVxS8KhX6D7I9XXJlNqbdvRlp9/glk5D" crossorigin="anonymous"></script>
     <script crossorigin="anonymous" src="https://unpkg.com/@hotwired/turbo@7.2.0/dist/turbo.es2017-umd.js"></script>
+    <script crossorigin="anonymous" src="https://unpkg.com/@hotwired/stimulus@3.1.0/dist/stimulus.umd.js"></script>
   </head>
 
   <body class="min-h-screen bg-gray-100">
