Migrates to fly.io and adds sse service (unused)

--- a/tmpl/layout/authenticated_base.tmpl
+++ b/tmpl/layout/authenticated_base.tmpl
@@ -5,7 +5,7 @@
 
     <title>Private Notes</title>
     <meta name="description" content="This application is for long form group conversations that you want to keep private.">
-    <meta name="author" content="profsmallpine">
+    <meta name="author" content="profsmallpine and co">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="shortcut icon" href="/assets/favicon.ico">
 
