--- a/tmpl/groups/index.tmpl
+++ b/tmpl/groups/index.tmpl
@@ -18,7 +18,13 @@
         </div>
         <div class="ml-4 mt-4 flex-shrink-0">
           <span class="inline-flex rounded-md shadow-sm">
-            <button type="button" class="relative inline-flex items-center px-4 py-2 border border-transparent text-sm leading-5 font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-500 focus:outline-none focus:shadow-outline-indigo focus:border-indigo-700 active:bg-indigo-700" onclick="Turbo.visit('/groups/new')">
+            <button 
+              type="button" 
+              class="relative inline-flex items-center px-4 py-2 border border-transparent text-sm leading-5 font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-500 focus:outline-none focus:shadow-outline-indigo focus:border-indigo-700 active:bg-indigo-700" 
+              hx-get="/groups/new"
+              hx-target="body"
+              hx-push-url="true"
+            >
               Create new group
             </button>
           </span>
