--- a/tmpl/layout/unauthenticated_base.tmpl
+++ b/tmpl/layout/unauthenticated_base.tmpl
@@ -17,7 +17,7 @@
     <style>html { font-family: 'Inter var', sans-serif; }</style>
 
     <script defer src="https://unpkg.com/alpinejs@3.3.4/dist/cdn.min.js"></script>
-    <script crossorigin="anonymous" src="https://unpkg.com/@hotwired/turbo@7.2.0/dist/turbo.es2017-umd.js"></script>
+    <script src="https://unpkg.com/htmx.org@1.9.4" integrity="sha384-zUfuhFKKZCbHTY6aRR46gxiqszMk5tcHjsVFxnUo8VMus4kHGVdIYVbOYYNlKmHV" crossorigin="anonymous"></script>
   </head>
 
   <body class="bg-gray-50">
